# duh

./: .coverage  .gitignore  README.md  SECURITY.md  pyproject.toml
.duh/: security.json  settings.json
.duh/templates/: code-review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/benchmark-2-ratelimit/: JUDGE.md  TASK.md  adversarial_all.sh  aggregate.py  init_baseline.sh  judge.sh  run.sh
benchmarks/benchmark-2-ratelimit/baseline/: .gitignore  README.md  pyproject.toml
benchmarks/benchmark-2-ratelimit/baseline/ratelimit/: __init__.py
benchmarks/benchmark-3-docs/: JUDGE.md  TASK.md  aggregate.py  consistency_all.sh  judge.sh  run.sh
benchmarks/double-agent-tdd/: JUDGE.md  README.md  TASK.md  aggregate.py  judge.sh  judge_all.sh  preflight.sh  run.sh  run_all.sh  run_duh.sh  run_first_party.sh
benchmarks/duhwave-agile/: RESULT.md
docs/: architecture-comparison.md  benchmark-results-2.md  benchmark-results.md  index.html  social-media-drafts.md
docs/adrs/: ADR-001-project-vision.md  ADR-002-kernel-design.md  ADR-003-ports-and-adapters.md  ADR-004-tool-protocol.md  ADR-005-safety-architecture.md  ADR-006-context-engineering.md  ADR-007-session-persistence.md  ADR-008-cli-design.md  ADR-009-provider-adapters.md  ADR-010-mcp-integration.md  ADR-011-tui-architecture.md  ADR-012-multi-agent.md  ADR-013-hook-system.md  ADR-014-plugin-architecture.md  ADR-015-configuration.md  ADR-016-memory-system.md  ADR-017-skills-system.md  ADR-018-progressive-disclosure.md  ADR-019-next-phase-plan.md  ADR-020-wave-roadmap.md  ADR-021-sdk-protocol.md  ADR-022-token-cost-control.md  ADR-023-safety-hardening.md  ADR-024-developer-experience.md  ADR-025-ecosystem-tools.md  ADR-026-production-readiness.md  ADR-027-loop-simplicity.md  ADR-028-duhwave-rlm-context-engine.md  ADR-028-env-var-allowlist.md  ADR-029-duhwave-recursive-cross-agent-links.md  ADR-029-file-caps.md  ADR-030-duhwave-persistent-task-lifecycle.md  ADR-030-graceful-shutdown.md  ADR-031-duhwave-coordinator-prompt-role-event-ingress.md  ADR-031-ptl-retry.md  ADR-032-duhwave-swarm-topology-bundles-control-plane.md  ADR-032-mcp-session-management.md  ADR-033-query-guard.md  ADR-034-bash-ast-parser.md  ADR-035-advanced-compaction.md  (+41 more)
docs/cookbook/: build-your-own-agent.md  build-your-own-swarm.md
docs/site/: _config.yml  benchmarks.html  comparisons.html  duhwave.html  getting-started.html  index.html  llms-full.txt  llms.txt  nav.js  robots.txt  security.html  sitemap.xml  style.css
docs/wiki/: Architecture.md  Benchmarks.md  Changelog.md  Configuration.md  Context-Management.md  Duhwave.md  Examples.md  FAQ.md  Getting-Started.md  Home.md  Multi-Agent.md  Provider-Setup.md  Security.md  Tools.md  _Sidebar.md
duh/: __init__.py  __main__.py  _optional_deps.py  agents.py  config.py  constitution.py  hooks.py  plugins.py
duh/adapters/: __init__.py  anthropic.py  approvers.py  deepseek.py  file_store.py  gemini.py  groq.py  litellm_provider.py  mcp_executor.py  mcp_manifest.py  mcp_transports.py  mcp_unicode.py  memory_store.py  mistral.py  model_compactor.py  native_executor.py  ollama.py  openai.py  openai_chatgpt.py  openrouter.py  qwen.py  renderers.py  simple_compactor.py  structured_logging.py  stub_provider.py  together.py  tool_format.py  tool_repair.py  vcr.py
duh/auth/: __init__.py  anthropic.py  anthropic_oauth.py  openai_chatgpt.py  store.py
duh/bridge/: __init__.py  protocol.py  server.py  session_relay.py
duh/cli/: __init__.py  batch.py  doctor.py  exit_codes.py  main.py  ndjson.py  parser.py  prewarm.py  provider_utils.py  repl.py  repl_renderers.py  review.py  runner.py  sdk_runner.py  session_builder.py  slash_commands.py
duh/duhwave/: __init__.py
duh/kernel/: __init__.py  attachments.py  audit.py  auto_memory.py  backoff.py  cache_tracker.py  compact_analytics.py  confirmation.py  context_gate.py  coordinator.py  deps.py  engine.py  file_size_guard.py  file_tracker.py  git_context.py  health_check.py  job_queue.py  loop.py  memory.py  memory_decay.py  messages.py  model_caps.py  permission_cache.py  plan_mode.py  post_compact.py  query_guard.py  redact.py  schema_validator.py  signals.py  skill.py  snapshot.py  tasks.py  templates.py  tokens.py  tool.py  tool_categories.py  undo.py  untrusted.py
duh/plugins/: __init__.py  manifest.py  trust_store.py
duh/ports/: __init__.py  approver.py  context.py  executor.py  memory.py  provider.py  renderer.py  store.py
duh/providers/: __init__.py  registry.py
duh/security/: __init__.py  audit.py  cli.py  config.py  engine.py  exceptions.py  finding.py  hooks.py  network_policy.py  path_policy.py  policy.py  trifecta.py  wizard.py
duh/tools/: __init__.py  agent_tool.py  ask_user_tool.py  bash.py  bash_ast.py  bash_security.py  db_tool.py  docker_tool.py  edit.py  github_tool.py  glob_tool.py  grep.py  http_tool.py  lsp_tool.py  mcp_tool.py  memory_tool.py  multi_edit.py  notebook_edit.py  read.py  registry.py  skill_tool.py  swarm_tool.py  task_tool.py  test_impact.py  todo_tool.py  tool_search.py  web_fetch.py  web_search.py  worktree.py  write.py
duh/ui/: __init__.py  app.py  approval_modal.py  command_palette.py  file_tree.py  logo.py  permission_modal.py  search_modal.py  styles.py  theme.py  theme_manager.py  tui_approver.py  widgets.py
examples/duhwave/: 01_rlm_demo.py  02_swarm_demo.py  03_event_driven.py  04_topology_bundle.py
examples/hermes_style/: agent.py
scripts/: smoke_duhwave_bundle.py  smoke_duhwave_spawn.py
tests/: e2e_claudeflow_smoke.py  e2e_sdk_smoke.py  e2e_uc_api_smoke.py  e2e_uc_chat_smoke.py
tests/benchmarks/: test_audit_perf.py
tests/fixtures/: simple_text.jsonl
tests/integration/: conftest.py  pty_helpers.py  test_cli_e2e.py  test_duhwave_daemon_ops.py  test_duhwave_e2e_lifecycle.py  test_duhwave_recursion_bounds.py  test_duhwave_remote_e2e.py  test_duhwave_resilience.py  test_e2e_comprehensive.py  test_e2e_new_features.py  test_e2e_provider_stack.py  test_e2e_security_stack.py  test_e2e_turn_stack.py  test_file_size_guard_flow.py  test_full_pipeline.py  (+13 more)
(+620 files in other folders)
