[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duh-cli"
dynamic = ["version"]
description = "D.U.H. — Duh is a Universal Harness. Provider-agnostic AI coding agent."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Nikhil Vallishayee" },
]
keywords = ["ai", "coding", "agent", "harness", "mcp", "cli", "claude", "openai", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/nikhilvallishayee/duh"
Repository = "https://github.com/nikhilvallishayee/duh"
Issues = "https://github.com/nikhilvallishayee/duh/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
rich = ["rich>=13.0"]
bridge = ["websockets>=12.0"]
attachments = ["pdfplumber>=0.10"]
mcp = ["mcp>=1.0"]
all = ["openai>=1.0", "litellm>=1.0", "rich>=13.0", "websockets>=12.0", "pdfplumber>=0.10", "mcp>=1.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "hypothesis>=6.0", "textual>=0.40", "openai>=1.0", "litellm>=1.0", "rich>=13.0", "websockets>=12.0", "pdfplumber>=0.10", "mcp>=1.0"]
security = [
    "pydantic>=2.0",
    "ruff>=0.6",
    "pip-audit>=2.10",
    "detect-secrets>=1.5",
    "cyclonedx-bom>=7",
]

[project.scripts]
duh = "duh.cli.main:main"

[project.entry-points."duh.security.scanners"]
ruff-sec          = "duh.security.scanners.ruff_sec:RuffSecScanner"
pip-audit         = "duh.security.scanners.pip_audit:PipAuditScanner"
detect-secrets    = "duh.security.scanners.detect_secrets:DetectSecretsScanner"
cyclonedx-sbom    = "duh.security.scanners.cyclonedx_sbom:CycloneDXScanner"
duh-repo          = "duh.security.scanners.duh_repo:RepoScanner"
duh-mcp-schema    = "duh.security.scanners.duh_mcp_schema:MCPSchemaScanner"
duh-mcp-pin       = "duh.security.scanners.duh_mcp_pin:MCPPinScanner"
duh-sandbox-lint  = "duh.security.scanners.duh_sandbox_lint:SandboxLintScanner"
duh-oauth-lint    = "duh.security.scanners.duh_oauth_lint:OAuthLintScanner"
semgrep           = "duh.security.scanners.semgrep_ext:SemgrepScanner"
osv-scanner       = "duh.security.scanners.osv_scanner:OSVScanner"
gitleaks          = "duh.security.scanners.gitleaks:GitleaksScanner"
bandit            = "duh.security.scanners.bandit_fallback:BanditScanner"

[tool.hatch.version]
path = "duh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["duh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that talk to real external services",
    "slow: marks tests that may take more than a few seconds",
]
