[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duh-cli"
dynamic = ["version"]
description = "D.U.H. — Duh is a Universal Harness. Provider-agnostic AI coding agent."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Nikhil Vallishayee" },
]
keywords = ["ai", "coding", "agent", "harness", "mcp", "cli", "claude", "openai", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    # SEC-MEDIUM-7: security-critical deps get tight upper bounds
    # (auth, transport, LLM SDKs). Lower bounds are the oldest version
    # we support; upper bounds are the next major we have NOT vetted.
    "anthropic>=0.40.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "openai>=1.0,<3.0",
    # Native provider SDKs (ADR-075): ship by default so the common
    # Gemini/Groq paths don't need the LiteLLM opt-in. google-genai
    # is the official Google SDK (supersedes google-generativeai).
    "google-genai>=0.3,<2",
    "groq>=0.11,<2",
    "mcp>=1.0,<2.0",
    # Non-security-critical deps: constrain to current major only.
    "pydantic>=2.0,<3.0",
    "rich>=13.0,<16.0",
    "textual>=0.40,<9.0",
    "websockets>=12.0,<17.0",
    "pdfplumber>=0.10,<1.0",
]

[project.urls]
Homepage = "https://github.com/nikhilvallishayee/duh"
Repository = "https://github.com/nikhilvallishayee/duh"
Issues = "https://github.com/nikhilvallishayee/duh/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "hypothesis>=6.0"]
# LiteLLM is opt-in due to supply-chain history (ADR-075). See pyproject for pinned floor.
# Floor is 1.83.8 to avoid the compromised 1.82.7 / 1.82.8 window (March 2026).
litellm = ["litellm>=1.83.8,<2"]
security = [
    "pydantic>=2.0,<3.0",
    "ruff>=0.6,<1.0",
    "pip-audit>=2.10,<3.0",
    "detect-secrets>=1.5,<2.0",
    "cyclonedx-bom>=7,<8",
]
tui-e2e = [
    "pytest-textual-snapshot>=1.0,<2",
    "pexpect>=4.9,<5",
    "pyte>=0.8,<1",
    "libtmux>=0.35,<1",
]
all = [
    "litellm>=1.83.8,<2",
    "pytest-textual-snapshot>=1.0,<2",
    "pexpect>=4.9,<5",
    "pyte>=0.8,<1",
    "libtmux>=0.35,<1",
]

[project.scripts]
duh = "duh.cli.main:main"

[project.entry-points."duh.security.scanners"]
ruff-sec          = "duh.security.scanners.ruff_sec:RuffSecScanner"
pip-audit         = "duh.security.scanners.pip_audit:PipAuditScanner"
detect-secrets    = "duh.security.scanners.detect_secrets:DetectSecretsScanner"
cyclonedx-sbom    = "duh.security.scanners.cyclonedx_sbom:CycloneDXScanner"
duh-repo          = "duh.security.scanners.duh_repo:RepoScanner"
duh-mcp-schema    = "duh.security.scanners.duh_mcp_schema:MCPSchemaScanner"
duh-mcp-pin       = "duh.security.scanners.duh_mcp_pin:MCPPinScanner"
duh-sandbox-lint  = "duh.security.scanners.duh_sandbox_lint:SandboxLintScanner"
duh-oauth-lint    = "duh.security.scanners.duh_oauth_lint:OAuthLintScanner"
semgrep           = "duh.security.scanners.semgrep_ext:SemgrepScanner"
osv-scanner       = "duh.security.scanners.osv_scanner:OSVScanner"
gitleaks          = "duh.security.scanners.gitleaks:GitleaksScanner"
bandit            = "duh.security.scanners.bandit_fallback:BanditScanner"

[tool.hatch.version]
path = "duh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["duh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
addopts = "--strict-markers"
markers = [
    "integration: marks tests that talk to real external services",
    "slow: marks tests that may take more than a few seconds",
    "snapshot: visual regression tests using pytest-textual-snapshot",
    "tmux: tmux-based integration tests requiring the tmux binary",
]
