[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ratelimit"
version = "0.1.0"
description = "Distributed rate limiter — benchmark scaffold"
requires-python = ">=3.10"
dependencies = [
  "redis>=5.0",
  "fakeredis>=2.0",
  "hypothesis>=6.0",
  "starlette>=0.35",
  "fastapi>=0.110",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["ratelimit"]
